<resources>
    <string name="app_name">Arabic</string>
    <string name="A">أ</string>
    <string name="B">ب</string>
    <string name="C">ت</string>
    <string name="D">د</string>
    <string name="M">م</string>
    <string name="R">ر</string>
    <string name="th">ث</string>
    <string name="J">ج</string>
    <string name="HH">ح</string>
    <string name="KH">خ</string>
    <string name="TH">ذ</string>
    <string name="Z">ز</string>
    <string name="S">س</string>
    <string name="SH">ش</string>
    <string name="SS">ص</string>
    <string name="THD">ض</string>
    <string name="TA">ط</string>
    <string name="THA">ظ</string>
    <string name="AIN">ع</string>
    <string name="GH">غ</string>
    <string name="F">ف</string>
    <string name="KK">ق</string>
    <string name="K">ك</string>
    <string name="L">ل</string>
    <string name="N">ن</string>
    <string name="H">هـ</string>
    <string name="W">و</string>
    <string name="Y">ي</string>
    <string name="rabbit">أرنب</string>
    <string name="lion">أسد</string>
    <string name="mouse">فأر</string>
    <string name="needle">إبرة</string>
    <string name="sky">سماء</string>
    <string name="cow">بقرة</string>
    <string name="bread">خبز</string>
    <string name="bear">دب</string>
    <string name="apple">تفاحة</string>
    <string name="turtle">سلحفاة</string>
    <string name="book">كتاب</string>
    <string name="frog">ضفدع</string>
    <string name="drug">دواء</string>
    <string name="comb">مشط</string>
    <string name="apricot">مشمش</string>
    <string name="foot">قدم</string>
    <string name="pom">رمان</string>
    <string name="butterfly">فراشة</string>
    <string name="pot">قدر</string>
    <string name="fox">ثعلب</string>
    <string name="triangle">مثلث</string>
    <string name="statue">تمثال</string>
    <string name="carrot">جزر</string>
    <string name="masjid">مسجد</string>
    <string name="crown">تاج</string>
    <string name="whale">حوت</string>
    <string name="swing">أرجوحة</string>
    <string name="croc">تمساح</string>
    <string name="sheep">خروف</string>
    <string name="palm">نخلة</string>
    <string name="rocket">صاروخ</string>
    <string name="wolf">ذئب</string>
    <string name="taste">حاسة الذوق</string>
    <string name="yum">لذيذ</string>
    <string name="giraffe">زرافة</string>
    <string name="snail">حلزون</string>
    <string name="banana">موز</string>
    <string name="car">سيارة</string>
    <string name="dress">فستان</string>
    <string name="seagull">نورس</string>
    <string name="sun">شمس</string>
    <string name="feather">ريشة</string>
    <string name="bed">فراش</string>
    <string name="box">صندوق</string>
    <string name="horse">حصان</string>
    <string name="sciss">مقص</string>
    <string name="egg">بيض</string>
    <string name="veg">خضروات</string>
    <string name="tooth">ضرس</string>
    <string name="airplane">طائرة</string>
    <string name="train">قطار</string>
    <string name="cat">قط</string>
    <string name="envelope">ظرف</string>
    <string name="umbrella">مظلة</string>
    <string name="wake">استيقظ</string>
    <string name="grape">عنب</string>
    <string name="candle">شمعة</string>
    <string name="beam">شعاع</string>
    <string name="elephant">فيل</string>
    <string name="pepper">فلفل</string>
    <string name="roof">سقف</string>
    <string name="monkey">قرد</string>
    <string name="steer">مقود</string>
    <string name="team">فريق</string>
    <string name="dog">كلب</string>
    <string name="sweep">مكنسة
</string>
    <string name="cage">قفص</string>
    <string name="king">ملك</string>
    <string name="lemon">ليمون</string>
    <string name="camel">جمل</string>
    <string name="spoon">ملعقة</string>
    <string name="bee">نحلة</string>
    <string name="plate">صحن</string>
    <string name="saw">منشار</string>
    <string name="cres">هلال</string>
    <string name="cave">كهف</string>
    <string name="face">وجه</string>
    <string name="park">منتزه</string>
    <string name="rose">وردة </string>
    <string name="puppy">جرو</string>
    <string name="peacock">طاووس</string>
    <string name="hand">يد</string>
    <string name="house">بيت</string>
    <string name="tea">شاي</string>
    <string name="crowd">إكتظاظ</string>
    <string name="parrot">ببغاء</string>
    <string name="crow">غراب</string>
    <string name="brain">دماغ</string>

</resources>
